# hdl_slam_ws

./: .gitignore  .gitmodules
src/: README.md  a.out  eigen.cpp
src/convert_point_cloud/: CMakeLists.txt  READ.md  package.xml
src/convert_point_cloud/launch/: convet_point_cloud.launch
src/eigen_test/: a.out  eigen.cpp  eigen1.cpp  main  main.cpp  main1  makefile  new.txt  note.cpp  test.cpp
src/gps_msgs/: CMakeLists.txt
src/hdl_graph_slam/: CMakeLists.txt  README.md  memorandom.md  nodelet_plugins.xml  package.xml
src/hdl_graph_slam/apps/: debug_nodelet.cpp  floor_detection_nodelet.cpp  hdl_graph_slam_nodelet.cpp  location_nodelet.cpp  prefiltering_nodelet.cpp  scan_matching_odometry_nodelet.cpp
src/hdl_graph_slam/debug/: add_gps.txt  add_gps2.txt  b.txt  new.txt  plotOdom.py  plotTimeConsume.py
src/hdl_graph_slam/include/hdl_graph_slam/: information_matrix_calculator.hpp  keyframe_updater.hpp  loop_detector.hpp  ros_utils.hpp
src/hdl_graph_slam/launch/: hdl_graph_slam_501.launch
src/hdl_graph_slam/launch/user/: filter.launch  floor_detect.launch  location.launch  mapping.launch  playbag.launch  registrater.launch  slam.launch
src/hdl_graph_slam/rviz/: hdl_graph_slam.rviz
src/hdl_graph_slam/scripts/: map2odom_publisher.py
src/hdl_graph_slam/src/hdl_graph_slam/: keyframe.cpp  (+4 more)
src/hdl_graph_slam/srv/: SaveOdom.srv
src/hdl_localization/: CMakeLists.txt
src/hdl_localization/apps/: globalmap_server_nodelet.cpp  hdl_localization_nodelet.cpp
src/hdl_localization/data/: .gitignore  draw_result.py
src/hdl_localization/launch/: README.md  hdl_localization.launch  record_odom.launch
src/hdl_localization/rviz/: hdl_localization.rviz
src/hdl_localization/src/: record_odom.cpp
src/message_convert/: CMakeLists.txt  README.md  package.xml
src/message_convert/src/: convert_others.cpp  convert_point_cloud.cpp  translation.cpp
(+3 files in other folders)
